module_sim/fft_module/fft_module.sdk/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
18:35:56 **** Build of project FFT_Butterfly_Microblaze_App_bsp ****
make -k all 
"Running Make include in microblaze_0/libsrc/bram_v4_2/src"
make -C microblaze_0/libsrc/bram_v4_2/src -s include  "SHELL=CMD" "COMPILER=mb-gcc" "ARCHIVER=mb-ar" "COMPILER_FLAGS=  -O2 -c -mcpu=v11.0 -mlittle-endian -mxl-soft-mul" "EXTRA_COMPILER_FLAGS=-ffunction-sections -fdata-sections -Wall -Wextra"
"Running Make include in microblaze_0/libsrc/cpu_v2_8/src"
make -C microblaze_0/libsrc/cpu_v2_8/src -s include  "SHELL=CMD" "COMPILER=mb-gcc" "ARCHIVER=mb-ar" "COMPILER_FLAGS=  -O2 -c -mcpu=v11.0 -mlittle-endian -mxl-soft-mul" "EXTRA_COMPILER_FLAGS=-ffunction-sections -fdata-sections -Wall -Wextra"
"Running Make include in microblaze_0/libsrc/FFT_Butterfly_Axi_Lite_v1_0/src"
make -C microblaze_0/libsrc/FFT_Butterfly_Axi_Lite_v1_0/src -s include  "SHELL=CMD" "COMPILER=mb-gcc" "ARCHIVER=mb-ar" "COMPILER_FLAGS=  -O2 -c -mcpu=v11.0 -mlittle-endian -mxl-soft-mul" "EXTRA_COMPILER_FLAGS=-ffunction-sections -fdata-sections -Wall -Wextra"
"Running Make include in microblaze_0/libsrc/standalone_v6_8/src"
make -C microblaze_0/libsrc/standalone_v6_8/src -s include  "SHELL=CMD" "COMPILER=mb-gcc" "ARCHIVER=mb-ar" "COMPILER_FLAGS=  -O2 -c -mcpu=v11.0 -mlittle-endian -mxl-soft-mul" "EXTRA_COMPILER_FLAGS=-ffunction-sections -fdata-sections -Wall -Wextra"
"Running Make libs in microblaze_0/libsrc/bram_v4_2/src"
make -C microblaze_0/libsrc/bram_v4_2/src -s libs  "SHELL=CMD" "COMPILER=mb-gcc" "ARCHIVER=mb-ar" "COMPILER_FLAGS=  -O2 -c -mcpu=v11.0 -mlittle-endian -mxl-soft-mul" "EXTRA_COMPILER_FLAGS=-ffunction-sections -fdata-sections -Wall -Wextra"
"Compiling bram"
mb-ar: creating ../../../lib/libxil.a
"Running Make libs in microblaze_0/libsrc/cpu_v2_8/src"
make -C microblaze_0/libsrc/cpu_v2_8/src -s libs  "SHELL=CMD" "COMPILER=mb-gcc" "ARCHIVER=mb-ar" "COMPILER_FLAGS=  -O2 -c -mcpu=v11.0 -mlittle-endian -mxl-soft-mul" "EXTRA_COMPILER_FLAGS=-ffunction-sections -fdata-sections -Wall -Wextra"
"Compiling cpu"
"Running Make libs in microblaze_0/libsrc/FFT_Butterfly_Axi_Lite_v1_0/src"
make -C microblaze_0/libsrc/FFT_Butterfly_Axi_Lite_v1_0/src -s libs  "SHELL=CMD" "COMPILER=mb-gcc" "ARCHIVER=mb-ar" "COMPILER_FLAGS=  -O2 -c -mcpu=v11.0 -mlittle-endian -mxl-soft-mul" "EXTRA_COMPILER_FLAGS=-ffunction-sections -fdata-sections -Wall -Wextra"
"Compiling FFT_Butterfly_Axi_Lite..."
FFT_Butterfly_Axi_Lite_selftest.c: In function 'FFT_BUTTERFLY_AXI_LITE_Reg_SelfTest':
FFT_Butterfly_Axi_Lite_selftest.c:52:71: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
    if ( FFT_BUTTERFLY_AXI_LITE_mReadReg (baseaddr, read_loop_index*4) != (read_loop_index+1)*READ_WRITE_MUL_FACTOR){
                                                                       ^~
FFT_Butterfly_Axi_Lite_selftest.c:36:6: warning: unused variable 'Index' [-Wunused-variable]
  int Index;
      ^~~~~
"Running Make libs in microblaze_0/libsrc/standalone_v6_8/src"
make -C microblaze_0/libsrc/standalone_v6_8/src -s libs  "SHELL=CMD" "COMPILER=mb-gcc" "ARCHIVER=mb-ar" "COMPILER_FLAGS=  -O2 -c -mcpu=v11.0 -mlittle-endian -mxl-soft-mul" "EXTRA_COMPILER_FLAGS=-ffunction-sections -fdata-sections -Wall -Wextra"
"Compiling standalone";
inbyte.c: In function 'inbyte':
inbyte.c:11:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
outbyte.c: In function 'outbyte':
outbyte.c:11:19: warning: unused parameter 'c' [-Wunused-parameter]
 void outbyte(char c) {
                   ^
microblaze_sleep.c:77:9: note: #pragma message: For the sleep routines, assembly instructions are used
 #pragma message ("For the sleep routines, assembly instructions are used")
         ^~~~~~~
'Finished building libraries'

**** Build of configuration Debug for project FFT_Butterfly_Microblaze_App ****

Nothing to build for project FFT_Butterfly_Microblaze_App

****  of configuration Debug for project FFT_Butterfly_Microblaze_App ****

Nothing to build for project FFT_Butterfly_Microblaze_App

****  of configuration Debug for project FFT_Butterfly_Microblaze_App ****

Nothing to build for project FFT_Butterfly_Microblaze_App

**** Build of configuration Debug for project FFT_Butterfly_Microblaze_App ****

Nothing to build for project FFT_Butterfly_Microblaze_App

****  of configuration Debug for project FFT_Butterfly_Microblaze_App ****

Nothing to build for project FFT_Butterfly_Microblaze_App
18:36:53 **** Auto Build of configuration Debug for project FFT_Butterfly_Microblaze_App ****
make all 
'Building file: ../src/main.c'
'Invoking: MicroBlaze gcc compiler'
mb-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/main.o" -I../../FFT_Butterfly_Microblaze_App_bsp/microblaze_0/include -mlittle-endian -mcpu=v11.0 -mxl-soft-mul -Wl,--no-relax -ffunction-sections -fdata-sections -MMD -MP -MF"src/main.d" -MT"src/main.o" -o "src/main.o" "../src/main.c"
'Finished building: ../src/main.c'
' '
'Building target: FFT_Butterfly_Microblaze_App.elf'
'Invoking: MicroBlaze gcc linker'
mb-gcc -Wl,-T -Wl,../src/lscript.ld -L../../FFT_Butterfly_Microblaze_App_bsp/microblaze_0/lib -mlittle-endian -mcpu=v11.0 -mxl-soft-mul -Wl,--no-relax -Wl,--gc-sections -o "FFT_Butterfly_Microblaze_App.elf"  ./src/main.o   -Wl,--start-group,-lxil,-lgcc,-lc,--end-group
e:/vivado_2018_3/sdk/2018.3/gnu/microblaze/nt/bin/../lib/gcc/microblaze-xilinx-elf/7.3.1/../../../../microblaze-xilinx-elf/lib/le/crtinit.o: In function `_crtinit':
(.text+0x78): undefined reference to `main'
collect2.exe: error: ld returned 1 exit status
make: *** [makefile:38: FFT_Butterfly_Microblaze_App.elf] Error 1
18:36:57 **** Auto Build of configuration Debug for project FFT_Butterfly_Microblaze_App ****
make all 
'Building file: ../src/main.c'
'Invoking: MicroBlaze gcc compiler'
mb-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/main.o" -I../../FFT_Butterfly_Microblaze_App_bsp/microblaze_0/include -mlittle-endian -mcpu=v11.0 -mxl-soft-mul -Wl,--no-relax -ffunction-sections -fdata-sections -MMD -MP -MF"src/main.d" -MT"src/main.o" -o "src/main.o" "../src/main.c"
../src/main.c: In function 'main':
../src/main.c:19:10: warning: variable 'Data_Output' set but not used [-Wunused-but-set-variable]
  int32_t Data_Output[16];
          ^~~~~~~~~~~
../src/main.c:17:6: warning: unused variable 'result' [-Wunused-variable]
  u32 result;
      ^~~~~~
../src/main.c: At top level:
../src/main.c:37:13: error: expected '=', ',', ';', 'asm' or '__attribute__' before 'on'
  *  Created on: 12.06.2021
             ^~
../src/main.c:37:17: error: too many decimal points in number
  *  Created on: 12.06.2021
                 ^~~~~~~~~~
make: *** [src/subdir.mk:23: src/main.o] Error 1
18:37:05 **** Auto Build of configuration Debug for project FFT_Butterfly_Microblaze_App ****
make all 
'Building file: ../src/main.c'
'Invoking: MicroBlaze gcc compiler'
mb-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/main.o" -I../../FFT_Butterfly_Microblaze_App_bsp/microblaze_0/include -mlittle-endian -mcpu=v11.0 -mxl-soft-mul -Wl,--no-relax -ffunction-sections -fdata-sections -MMD -MP -MF"src/main.d" -MT"src/main.o" -o "src/main.o" "../src/main.c"
../src/main.c: In function 'main':
../src/main.c:19:10: warning: variable 'Data_Output' set but not used [-Wunused-but-set-variable]
  int32_t Data_Output[16];
          ^~~~~~~~~~~
../src/main.c:17:6: warning: unused variable 'result' [-Wunused-variable]
  u32 result;
      ^~~~~~
'Finished building: ../src/main.c'
' '
'Building target: FFT_Butterfly_Microblaze_App.elf'
'Invoking: MicroBlaze gcc linker'
mb-gcc -Wl,-T -Wl,../src/lscript.ld -L../../FFT_Butterfly_Microblaze_App_bsp/microblaze_0/lib -mlittle-endian -mcpu=v11.0 -mxl-soft-mul -Wl,--no-relax -Wl,--gc-sections -o "FFT_Butterfly_Microblaze_App.elf"  ./src/main.o   -Wl,--start-group,-lxil,-lgcc,-lc,--end-group
'Finished building target: FFT_Butterfly_Microblaze_App.elf'
' '
'Invoking: MicroBlaze Print Size'
mb-size FFT_Butterfly_Microblaze_App.elf  |tee "FFT_Butterfly_Microblaze_App.elf.size"
   text	   data	    bss	    dec	    hex	filename
   2448	    268	   3108	   5824	   16c0	FFT_Butterfly_Microblaze_App.elf
'Finished building: FFT_Butterfly_Microblaze_App.elf.size'
' '
18:37:08 **** Auto Build of configuration Debug for project FFT_Butterfly_Microblaze_App ****
make all 
make: Nothing to be done for 'all'.
18:37:12 **** Incremental Build of configuration Debug for project FFT_Butterfly_Microblaze_App ****
make all 
make: Nothing to be done for 'all'.
